--- a/for_study/study_html/study_html.ipynb
+++ b/for_study/study_html/study_html.ipynb
@@ -193,9 +193,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<body>\n",
+       "  <h1>\n",
+       "    高広家の家族構成\n",
+       "    </h1>\n",
+       "<ol>\n",
+       "  <li>Nobuyuki</li>\n",
+       "  <li>Mari</li>\n",
+       "  <li>Kazue</li>\n",
+       "</ol>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%HTML\n",
+    "<body>\n",
+    "  <h1>\n",
+    "    高広家の家族構成\n",
+    "    </h1>\n",
+    "<ol>\n",
+    "  <li>Nobuyuki</li>\n",
+    "  <li>Mari</li>\n",
+    "  <li>Kazue</li>\n",
+    "</ol>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 高広家の家族構成\n",
+    "* nobiyuki\n",
+    "* mari\n",
+    "* kazue\n",
+    "\n",
+    " 1. nobiyuki\n",
+    " 1. mari\n",
+    " 1. kazue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
@@ -215,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
